@@ -77,6 +77,8 @@ libpoke_modules="
   configmake
   c-strtof
   c-strtod
+  c-vasprintf
+  c-vsnprintf
   errno
   fopen-gnu
   free-posix
@@ -109,8 +111,6 @@ libpoke_modules="
   tempname
   timespec
   tmpdir
-  vasprintf-posix
-  vsnprintf-posix
   xalloc
   strstr
   lib-symbol-visibility
